IRC138782/scripts/jupyter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub
  namespace: jupyter-dev
  labels:
    app: jupyterhub
    component: hub
spec:
  selector:
    app: jupyterhub
    component: hub
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  - name: hub
    port: 8081
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
